; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/security/smack/extr_smackfs.c_cipso_seq_start.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/security/smack/extr_smackfs.c_cipso_seq_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8* }
%struct.seq_file = type { i32 }

@SEQ_READ_FINISHED = common dso_local global i64 0, align 8
@smack_known_list = common dso_local global %struct.TYPE_3__ zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.seq_file*, i64*)* @cipso_seq_start to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @cipso_seq_start(%struct.seq_file* %0, i64* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.seq_file*, align 8
  %5 = alloca i64*, align 8
  store %struct.seq_file* %0, %struct.seq_file** %4, align 8
  store i64* %1, i64** %5, align 8
  %6 = load i64*, i64** %5, align 8
  %7 = load i64, i64* %6, align 8
  %8 = load i64, i64* @SEQ_READ_FINISHED, align 8
  %9 = icmp eq i64 %7, %8
  br i1 %9, label %10, label %11

10:                                               ; preds = %2
  store i8* null, i8** %3, align 8
  br label %17

11:                                               ; preds = %2
  %12 = call i64 @list_empty(%struct.TYPE_3__* @smack_known_list)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %11
  store i8* null, i8** %3, align 8
  br label %17

15:                                               ; preds = %11
  %16 = load i8*, i8** getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @smack_known_list, i32 0, i32 0), align 8
  store i8* %16, i8** %3, align 8
  br label %17

17:                                               ; preds = %15, %14, %10
  %18 = load i8*, i8** %3, align 8
  ret i8* %18
}

declare dso_local i64 @list_empty(%struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
